# facilitatorBackend-ahoum-crm-migrated

./: .dockerignore  .gitignore  API_ENDPOINTS.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENHANCED_ONBOARDING_SUMMARY.md  ONBOARDING_INTEGRATION_GUIDE.md  README.md  README_ECOSYSTEM.md  WHATSAPP_SETUP_GUIDE.md  config.py  main.py  populate_dummy_data.py  pyproject.toml  setup.py  setup_unified_system.py  test_db_connection.py  test_general_calling_api.py  test_onboarding_endpoints.py  test_whatsapp_integration.py
middleware/: auth_required.py  session_required.py  subdomain_middleware.py
migrations/: add_course_promotion_tables.py  add_crm_onboarding_fields.py  add_crm_onboarding_fields_simple.py  add_website_fields.py  fix_course_promotion_calls_schema.py
models/: __init__.py  database.py  database_minimal.py  orm_models.py  secure_database.py  secure_repositories.py  sqlalchemy_models.py
routes/: campaigns_routes.py  course_calling_routes.py  courses_routes.py  facilitator_routes.py  general_calling_routes.py  offerings_routes.py  phone_auth_routes.py  public_website_routes.py  students_routes.py  website_routes.py
services/: whatsapp_service.py
